--- a/action.yml
+++ b/action.yml
@@ -4,6 +4,9 @@ inputs:
   token:
     required: true
     description: Okteto API token.
+  branch:
+    required: true
+    description: Branch to test Okteto deployment with.
 runs:
   using: 'node16'
   main: 'index.js'
